--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -110,6 +110,7 @@
           <a class="collapse-item" routerLink="/home/product-cat"><i class="fas fa-fw fa-cart-plus"></i>Category</a>
           <a class="collapse-item" routerLink="/home/product-subcat"><i class="fas fa-fw fa-cart-plus"></i>Sub Category</a>
           <a class="collapse-item" routerLink="/home/product-save"><i class="fas fa-fw fa-cart-plus"></i>Product</a>
+          <a class="collapse-item" routerLink="/home/product-pricing"><i class="fas fa-fw fa-cart-plus"></i>Pricing</a>
         </div>
       </div>
     </li>
