--- a/ui/src/app/components/views/address/district-save/district-save.component.html
+++ b/ui/src/app/components/views/address/district-save/district-save.component.html
@@ -6,6 +6,7 @@
         <select
           formControlName="country"
           class="form-control"
+          [ngClass]="{ 'is-invalid': f['country'].errors && f['country'].touched && f['country'].dirty}"
           [(ngModel)]="selectedCountry"
           (change)="onCountrySelection(selectedCountry)"
         >
@@ -17,7 +18,9 @@
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="state">State</label>
-        <select formControlName="state" class="form-control">
+        <select formControlName="state" 
+          class="form-control"
+          [ngClass]="{ 'is-invalid': f['state'].errors && f['state'].touched && f['state'].dirty}">
           <option [ngValue]="null" selected disabled>Choose...</option>
           <option *ngFor="let state of states" [ngValue]="state">
             {{ state.stateName }}
@@ -26,13 +29,16 @@
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="districtName">District Name</label>
-        <input type="text" formControlName="districtName" class="form-control form-control-user" id="districtName"
+        <input type="text" formControlName="districtName" 
+          class="form-control form-control-user" 
+          [ngClass]="{ 'is-invalid': f['districtName'].errors && f['districtName'].touched && f['districtName'].dirty}"
+          id="districtName"
           placeholder="District Name" />
       </div>
     </div>
     <div class="form-group row">
       <div class="col-sm-3 mb-3 mb-sm-0">
-        <button type="submit" class="btn btn-success btn-user btn-block">
+        <button type="submit" [disabled]="districtForm.invalid" class="btn btn-success btn-user btn-block">
           Add
         </button>
       </div>
