--- a/ui/src/app/components/views/offers/offers-add/offers-add.component.html
+++ b/ui/src/app/components/views/offers/offers-add/offers-add.component.html
@@ -3,12 +3,16 @@
     <div class="form-group row">
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="desc">Description</label>
-        <input type="text" formControlName="desc" class="form-control form-control-user" id="desc"
+        <input type="text" formControlName="desc"
+        [ngClass]="{ 'is-invalid': f['desc'].errors && f['desc'].touched && f['desc'].dirty}"
+          class="form-control form-control-user" id="desc"
           placeholder="Offer Description" />
       </div>
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="offerCode">Offer Code </label>
-        <input type="text" formControlName="offerCode" class="form-control form-control-user" id="offerCode"
+        <input type="text"
+          [ngClass]="{ 'is-invalid': f['offerCode'].errors && f['offerCode'].touched && f['offerCode'].dirty}"
+          formControlName="offerCode" class="form-control form-control-user" id="offerCode"
           placeholder="Offer Code" />
       </div>
     </div>
@@ -17,6 +21,7 @@
         <label for="applicableOn">Offer Type</label>
         <select
           formControlName="offerApplicableOn"
+          [ngClass]="{ 'is-invalid': f['offerApplicableOn'].errors && f['offerApplicableOn'].touched && f['offerApplicableOn'].dirty}"
                   class="form-control">
           <option [ngValue]="null" selected="true" disabled>Choose...</option>
           <option *ngFor="let offer of offerApplicableOn" [ngValue]="offer">
@@ -26,13 +31,15 @@
       </div>
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="expression">Offer Expression </label>
-        <input type="text" formControlName="expression" class="form-control form-control-user" id="expression"
-          placeholder="Offer Expression" />
+        <input type="text" formControlName="expression"
+          [ngClass]="{ 'is-invalid': f['expression'].errors && f['expression'].touched && f['expression'].dirty}"
+          class="form-control form-control-user" id="expression"
+          placeholder="Sample Expression : ? * 0 / 100" />
       </div>
     </div>
     <div class="form-group row">
       <div class="col-sm-3 mb-3 mb-sm-0">
-        <button type="submit" class="btn btn-primary btn-user btn-block">
+        <button type="submit" [disabled]="offerForm.invalid" class="btn btn-primary btn-user btn-block">
           Add
         </button>
       </div>
