--- a/ui/src/app/components/views/product/product-subcategory/product-subcategory.component.html
+++ b/ui/src/app/components/views/product/product-subcategory/product-subcategory.component.html
@@ -7,6 +7,7 @@
             formControlName="productCategory"
             [(ngModel)]="selectedProdCategory"
             class="form-control"
+            [ngClass]="{ 'is-invalid': f['productCategory'].errors && f['productCategory'].touched && f['productCategory'].dirty}"
           >
             <option [ngValue]="null" selected disabled>Choose...</option>
             <option *ngFor="let prodCat of productCategories" [ngValue]="prodCat">{{prodCat.categoryName}}</option>
@@ -18,6 +19,7 @@
             type="text"
             formControlName="subCategoryName"
             class="form-control form-control-user"
+            [ngClass]="{ 'is-invalid': f['subCategoryName'].errors && f['subCategoryName'].touched && f['subCategoryName'].dirty}"
             id="subCategoryName"
             placeholder="Product Sub Category Name"
           />
@@ -28,6 +30,7 @@
             type="text"
             formControlName="description"
             class="form-control form-control-user"
+            [ngClass]="{ 'is-invalid': f['description'].errors && f['description'].touched && f['description'].dirty}"
             id="description"
             placeholder="Product Sub Category Description"
           />
@@ -35,7 +38,7 @@
       </div>
       <div class="form-group row">
         <div class="col-sm-3 mb-3 mb-sm-0">
-        <button type="submit" class="btn btn-success btn-user btn-block">
+        <button type="submit" [disabled]="productSubCatForm.invalid" class="btn btn-success btn-user btn-block">
           Add
         </button>
       </div>
