--- a/ui/src/app/components/views/scheme/scheme-add/scheme-add.component.html
+++ b/ui/src/app/components/views/scheme/scheme-add/scheme-add.component.html
@@ -3,19 +3,25 @@
     <div class="form-group row">
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="schemeName">Scheme Name</label>
-        <input type="text" formControlName="schemeName" class="form-control form-control-user" id="schemeName"
+        <input type="text" formControlName="schemeName" 
+          [ngClass]="{ 'is-invalid': f['schemeName'].errors && f['schemeName'].touched && f['schemeName'].dirty}"
+          class="form-control form-control-user" id="schemeName"
           placeholder="Scheme Name" />
       </div>
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="description">Scheme description</label>
-        <input type="text" formControlName="description" class="form-control form-control-user" id="description"
+        <input type="text" formControlName="description" 
+          [ngClass]="{ 'is-invalid': f['description'].errors && f['description'].touched && f['description'].dirty}"
+          class="form-control form-control-user" id="description"
           placeholder="Scheme description" />
       </div>
     </div>
     <div class="form-group row">
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="uomType">UOM Type</label>
-        <select id="uomType" class="form-control" formControlName="uomType" [(ngModel)]="selectedUOMType">
+        <select id="uomType" class="form-control" 
+          [ngClass]="{ 'is-invalid': f['uomType'].errors && f['uomType'].touched && f['uomType'].dirty}"
+          formControlName="uomType" [(ngModel)]="selectedUOMType">
           <option [ngValue]="null" selected disabled>Choose...</option>
           <option *ngFor="let uom of uoms" [ngValue]="uom">
             {{ uom.desc }}
@@ -24,7 +30,9 @@
       </div>
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="uomValue">UOM Value</label>
-        <input type="text" formControlName="uomValue" class="form-control form-control-user" id="uomValue"
+        <input type="text" formControlName="uomValue" 
+          [ngClass]="{ 'is-invalid': f['uomValue'].errors && f['uomValue'].touched && f['uomValue'].dirty}"
+          class="form-control form-control-user" id="uomValue"
           placeholder="UOM Value" />
       </div>
     </div>
@@ -32,7 +40,9 @@
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="offerType">Select Offers</label>
         <div class="input-group">
-          <select id="offerType" class="form-control" formControlName="offerType" [(ngModel)]="selectedOffer">
+          <select id="offerType" 
+            [ngClass]="{ 'is-invalid': f['offerType'].errors && f['offerType'].touched && f['offerType'].dirty}"
+            class="form-control" formControlName="offerType" [(ngModel)]="selectedOffer">
             <option [ngValue]="null" selected disabled>Choose...</option>
             <option *ngFor="let offer of offers" [ngValue]="offer">
               {{ offer.desc }}
@@ -46,7 +56,9 @@
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="prodCategory">Select Product Category</label>
         <div class="input-group">
-          <select id="prodCategory" class="form-control" formControlName="prodCategory" [(ngModel)]="selectedProdCategory">
+          <select id="prodCategory" 
+            [ngClass]="{ 'is-invalid': f['prodCategory'].errors && f['prodCategory'].touched && f['prodCategory'].dirty}"
+            class="form-control" formControlName="prodCategory" [(ngModel)]="selectedProdCategory">
             <option [ngValue]="null" selected disabled>Choose...</option>
             <option *ngFor="let prodCat of prodCategories" [ngValue]="prodCat">
               {{ prodCat.categoryName }}
@@ -86,7 +98,7 @@
       </div>
     </div> -->
     <div class="form-group row">
-      <button type="submit" class="btn btn-primary btn-user btn-block">
+      <button type="submit" [disabled]="schemeForm.invalid" class="btn btn-primary btn-user btn-block">
         Add
       </button>
     </div>
