--- a/ui/src/app/components/views/signup/signup.component.html
+++ b/ui/src/app/components/views/signup/signup.component.html
@@ -13,7 +13,7 @@
               <div class="form-group row ">
                 <div class="col-sm-6 mb-3 mb-sm-0 ">
                   <input type="text" formControlName="firstName" 
-                    [ngClass]="{ 'is-invalid': f['firstName'].errors?.['invalid'] && f['firstName'].touched && f['firstName'].dirty}"
+                    [ngClass]="{ 'is-invalid': f['firstName'].errors && f['firstName'].touched && f['firstName'].dirty}"
                     class="form-control form-control-user " id="firstName"
                     placeholder="First Name ">
                     <small class="text-danger" *ngIf="f['firstName'].errors?.['required'] && f['firstName'].touched">FirstName is mandatory</small>
@@ -25,13 +25,13 @@
               </div>
               <div class="form-group ">
                 <input type="email" formControlName="username"
-                  [ngClass]="{ 'is-invalid': f['username'].errors?.['invalid'] && f['username'].touched && f['username'].dirty}"
+                  [ngClass]="{ 'is-invalid': f['username'].errors && f['username'].touched && f['username'].dirty}"
                   class="form-control form-control-user" id="username" placeholder="Email Address">
                 <!-- user name validation error messages-->
                 <small class="text-danger" *ngIf="f['username'].errors?.['required'] && f['username'].touched">Email
                   ID
                   mandatory</small>
-                <small class="text-danger" *ngIf="f['username'].errors?.['email'] && f['username'].touched">Email
+                <small class="text-danger" *ngIf="f['username'].errors?.['emailValidator'] && f['username'].touched">Email
                   ID
                   Invalid</small>
               </div>
