--- a/ui/src/app/components/views/tx-sales/tx-sales.component.html
+++ b/ui/src/app/components/views/tx-sales/tx-sales.component.html
@@ -6,21 +6,25 @@
         <input
           type="text"
           formControlName="customerName"
+          [ngClass]="{ 'is-invalid': f['customerName'].errors && f['customerName'].touched && f['customerName'].dirty}"
           class="form-control form-control-user"
           id="customerName"
           placeholder="Customer Name"
-          [disabled]="true"
+          readonly
         />
+        <small class="text-danger" *ngIf="f['customerName'].errors?.['required'] && f['customerName'].touched">customerName Required</small>
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="phoneNumber">Phone Number </label>
         <input
           type="text"
           formControlName="phoneNumber"
+          [ngClass]="{ 'is-invalid': f['phoneNumber'].errors && f['phoneNumber'].touched && f['phoneNumber'].dirty}"
           class="form-control form-control-user"
           id="phoneNumber"
           placeholder="Customer Phone Number"
         />
+        <small class="text-danger" *ngIf="f['phoneNumber'].errors?.['required'] && f['phoneNumber'].touched">Phone Number Required</small>
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="phoneSearch">Search User</label>
@@ -39,6 +43,7 @@
         <select
           id="productCategory"
           class="form-control"
+          [ngClass]="{ 'is-invalid': f['productCategory'].errors && f['productCategory'].touched && f['productCategory'].dirty}"
           formControlName="productCategory"
           [(ngModel)]="selectedProductCat"
           (change)="onProductCatSelection(selectedProductCat)"
@@ -57,6 +62,7 @@
         <select
           id="productSubCategory"
           class="form-control"
+          [ngClass]="{ 'is-invalid': f['productSubCategory'].errors && f['productSubCategory'].touched && f['productSubCategory'].dirty}"
           formControlName="productSubCategory"
           [(ngModel)]="selectedProductSubCat"
           (change)="onProductSubCatSelection(selectedProductSubCat)"
@@ -75,6 +81,7 @@
         <select
           id="product"
           class="form-control"
+          [ngClass]="{ 'is-invalid': f['product'].errors && f['product'].touched && f['product'].dirty}"
           formControlName="product"
           [(ngModel)]="selectedProduct"
           (change)="onProductSelection(selectedProduct)"
@@ -90,6 +97,7 @@
         <select
           id="uom"
           class="form-control"
+          [ngClass]="{ 'is-invalid': f['uom'].errors && f['uom'].touched && f['uom'].dirty}"
           formControlName="uom"
           [(ngModel)]="selectedUOM"
         >
@@ -105,6 +113,7 @@
           type="text"
           formControlName="qty"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['qty'].errors && f['qty'].touched && f['qty'].dirty}"
           id="qty"
           placeholder="Enter Quantity"
           (change)="onQtyUpdate()"
@@ -116,6 +125,7 @@
           type="text"
           formControlName="costPrice"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['costPrice'].errors && f['costPrice'].touched && f['costPrice'].dirty}"
           id="costPrice"
           placeholder="Cost Price"
         />
@@ -126,6 +136,7 @@
           type="text"
           formControlName="sellingPrice"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['sellingPrice'].errors && f['sellingPrice'].touched && f['sellingPrice'].dirty}"
           id="sellingPrice"
           placeholder="Selling Price"
           (change)="updateSalesValue()"
@@ -137,6 +148,7 @@
           type="text"
           formControlName="wastageCharges"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['wastageCharges'].errors && f['wastageCharges'].touched && f['wastageCharges'].dirty}"
           id="wastageCharges"
           placeholder="Wastage Charges"
           (focusout)="updateSalesValue()"
@@ -150,6 +162,7 @@
           type="text"
           formControlName="makingCharges"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['makingCharges'].errors && f['makingCharges'].touched && f['makingCharges'].dirty}"
           id="makingCharges"
           placeholder="Making Charges"
           (focusout)="updateSalesValue()"
@@ -161,12 +174,13 @@
           type="text"
           formControlName="salesValue"
           class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['salesValue'].errors && f['salesValue'].touched && f['salesValue'].dirty}"
           id="salesValue"
           placeholder="Total Amount"
         />
       </div>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" [disabled] = "salesForm.invalid" class="btn btn-success">Submit</button>
   </form>
 </div>
 <br />
