--- a/ui/src/app/components/views/tx-sales/tx-sales.component.html
+++ b/ui/src/app/components/views/tx-sales/tx-sales.component.html
@@ -169,6 +169,28 @@
         />
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="total">SGST</label>
+        <input
+          type="text"
+          formControlName="sgst"
+          class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['sgst'].errors && f['sgst'].touched && f['sgst'].dirty}"
+          id="sgst"
+          placeholder="SGST"
+        />
+      </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="total">CGST</label>
+        <input
+          type="text"
+          formControlName="cgst"
+          class="form-control form-control-user"
+          [ngClass]="{ 'is-invalid': f['cgst'].errors && f['cgst'].touched && f['cgst'].dirty}"
+          id="cgst"
+          placeholder="CGST"
+        />
+      </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="total">Sales Value</label>
         <input
           type="text"
